progress, finisehd basic project cards

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -29,6 +29,12 @@ a:hover {
     }
 }
 
+#main-wide {
+    width: 70%;
+    margin: 0 auto;
+}
+
+
 #nav {
     display: flex;
     align-items: flex-end;
