--- a/_sass/constants.scss
+++ b/_sass/constants.scss
@@ -1,5 +1,9 @@
 $rounded-borders: 5px;
 
+
+// Small tablets and large smartphones (landscape view)
+$screen-xsm-min: 476px;
+
 // Small tablets and large smartphones (landscape view)
 $screen-sm-min: 576px;
 
@@ -14,3 +18,4 @@ $screen-xl-min: 1200px;
 
 
 $highlight: #e17380;
+$grey: #555555;
