--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,13 @@
 <div id="footer">
+  <div class="icons-wrap">
+  {% for item in site.data.icon_links %}
+    <a href="{{ item.url }}" target="_blank"><i class="{{item.icon}} icon_link"></i></a>
+  {% endfor %}
+  </div>
   <p>
-    © 2017 {{site.owner}}  ·
-    <a href="{{site.url}}{{site.baseurl}}/contact/">Contact</a>  ·
-    <a style="color: black;" href="{{site.url}}{{site.baseurl}}/impressum/">Impressum</a>
+    2020   ·
+    {{site.owner}}  ·
+    <a href="mailto:justinyu@mit.edu">Contact</a> 
   </p>
-  <p>
-    <a href="https://github.com/Trybnetic/minimalist/">Minimalist</a> created with &#9829; by <a href="https://github.com/Trybnetic/">Marc Weitz</a>
-  </p>
+  
 </div>
