--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
     <title>{{site.title}}</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="{{site.url}}{{site.baseurl}}/css/styles.css" type="text/css" rel="stylesheet"></link>
+    <link href="/css/styles.css" type="text/css" rel="stylesheet"></link>
     <link href="https://fonts.googleapis.com/css?family=Cutive+Mono" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <meta content="{{site.description}}" name="description"></meta>
