changed baseurl format

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,11 +1,11 @@
 <div id="nav">
-  <a href="{{site.url}}{{site.baseurl}}/"><h1 id="title-text" href="{{site.url}}{{site.baseurl}}/">Justin Yu</h1></a>
+  <a href="/"><h1 id="title-text" href="/">Justin Yu</h1></a>
   <div id="nav-btns-wrap">
-    <a class="nav-link" href="{{site.url}}{{site.baseurl}}/">About</a>
-    <!-- <a class="nav-link" href="{{site.url}}{{site.baseurl}}/blog">Blog</a> -->
-    <a class="nav-link" href="{{site.url}}{{site.baseurl}}/projects/">
+    <a class="nav-link" href="/">About</a>
+    <!-- <a class="nav-link" href="/blog">Blog</a> -->
+    <a class="nav-link" href="/projects/">
     Projects</a>
-    <a class="nav-link" href="{{site.url}}{{site.baseurl}}/assets/resume.pdf" target="_blank">
+    <a class="nav-link" href="/assets/resume.pdf" target="_blank">
     Resume</a>
   </div>
 </div>
