--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@
           <div id="categories">
             <p><b>Categories:</b>&nbsp;
               {% for category in page.categories %}
-                <a href="{{site.url}}{{site.baseurl}}/categories/{{category}}/">#{{category}}</a>&nbsp;
+                <a href="/categories/{{category}}/">#{{category}}</a>&nbsp;
               {% endfor %}
             </p>
           </div>
