--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,5 +1,5 @@
 <div id="logo">
-  <!-- <a href="{{site.url}}{{site.baseurl}}/">
-    <img src="{{site.url}}{{site.baseurl}}/assets/images/logo.svg" alt="Logo"></img>
+  <!-- <a href="/">
+    <img src="/assets/images/logo.svg" alt="Logo"></img>
   </a> -->
 </div>
