Revert "changed baseurl format"
This reverts commit 7119d061f75abae5d09c3bb7edbb0703b06d6919.

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -13,7 +13,7 @@
       {% endif %}
       {% for post in site.categories[page.category] %}
         <div id="post-short">
-          <a href="{{post.url}}">
+          <a href="{{site.url}}{{site.baseurl}}{{post.url}}">
             <h3>{{post.title}}</h3>
           </a>
           <i>posted on {{ post.date | date: "%-d %b %Y" }}</i>
