added small additions

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div id="footer">
   <div class="icons-wrap">
-  {% for item in site.data.icon_links %}
+  {% for item in site.data.social_links %}
     <a href="{{ item.url }}" target="_blank"><i class="{{item.icon}} icon_link"></i></a>
   {% endfor %}
   </div>
