--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,10 @@
     <!-- <a class="nav-link" href="{{site.url}}{{site.baseurl}}/blog">Blog</a> -->
     <a class="nav-link" href="{{site.url}}{{site.baseurl}}/projects/">
     Projects</a>
+    <a class="nav-link" href="{{site.url}}{{site.baseurl}}/blog">
+    Blog</a>
     <a class="nav-link" href="{{site.url}}{{site.baseurl}}/assets/resume.pdf" target="_blank">
     Resume</a>
+    
   </div>
 </div>
