--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,11 +2,10 @@
   <a href="{{site.url}}{{site.baseurl}}/"><h1 id="title-text" href="{{site.url}}{{site.baseurl}}/">Justin Yu</h1></a>
   <div id="nav-btns-wrap">
     <a class="nav-link" href="{{site.url}}{{site.baseurl}}/">About</a>
-    <!-- <a class="nav-link" href="{{site.url}}{{site.baseurl}}/blog">Blog</a> -->
     <a class="nav-link" href="{{site.url}}{{site.baseurl}}/projects/">
     Projects</a>
-    <a class="nav-link" href="{{site.url}}{{site.baseurl}}/blog">
-    Blog</a>
+<!--     <a class="nav-link" href="{{site.url}}{{site.baseurl}}/blog">
+    Blog</a> -->
     <a class="nav-link" href="{{site.url}}{{site.baseurl}}/assets/resume.pdf" target="_blank">
     Resume</a>
     
